style.css
/* Importing the Lato Google Font (Regular and Bold) */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');

/* ! GENERAL STYLING */
body {
    font-family: 'Lato', sans-serif;
    font-size: 15px;
    background-color: #69adc5;
    padding: 0;
    margin: 0;
    line-height: 2;
}

.container {
    width: 70%;
    margin: auto;
    overflow: hidden;
}

ul {
    margin: 0;
    padding: 0;
}

/* ! HEADER */
header {
    background-color: #3f97abbe;
    color:#960a08;
    min-height: 60px;
    border-bottom: 3px solid #960a08;
    padding: 5px 0;
}

header > .container {
    display: flex;
    justify-content: space-around;
}

header ul {
    height: 100%;
    display: flex;
    align-items: center;
}

header li {
    list-style: none;
    padding: 10px;
}

header a {
    color: #960a08;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 18px;
}

#headerName, #current a {
    color: #960a08;
    font-weight: 700;
}

#current a:hover, a:hover {
    color: #960a08;
    font-weight: 700;
}

/* ! ABOUT ME TEXT */
#showcase {
    min-height: 200px;
    background-image: url("");
    background-position: center;
    background-size: cover;
    text-align: left;
    color: #2d2b3e;
    border-bottom: 3px solid #960a08;
}

#showcase h1 {
    margin-top: 10px;
    margin-bottom: 5px;
    font-size: 20px;
}

#showcase p {
    font-size: 18px;
}

/* ! IMAGE BAR */
#imageBar {
    margin-bottom: 20px;
    background-color: #3f97abbe;
    border-bottom: 3px solid #960a08;
}

#imageBar > .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

img {
    width: 18%;
    margin: 1.25%;
    float: left;
    text-emphasis: center;
}

/* ! PROJECTS */
#projects {
    margin-bottom: 20px;
    border-bottom: 3px solid #960a08;
}

#projects > .container {
    display: flex;
    justify-content: space-between;
}

#projects > h1 {
    color: #960a08;
    text-align: center;
    font-size: 40px;
}

.box {
    width: 30%;
    text-align: center;
    padding: 10px;
}

#projects a {
    color: #960a08;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 18px;
}

#projects > h2 {
    font-size: 20px;
}

#projects .light {
    color: #2d2b3e;
}

#projects a:hover, a:hover {
    color: #960a08;
    font-weight: 700;
}

/* ! SKILLS */
#skills {
    background-color: #3f97abbe;
    margin-bottom: 20px;
    border-bottom: 3px solid #960a08;
}

#skills > .container {
    display: flex;
    justify-content: space-between;
}

#skills > h1 {
    color: #960a08;
    text-align: center;
    font-size: 40px;
} 

.box {
    width: 30%;
    text-align: center;
    padding: 10px;
    color: #2d2b3e;
}

i {
    font-size: 50px;
}

.fa-html5 {
    color: #d45632;
}

.fa-css3 {
    color: #2d50dc;
}

.fa-square-js {
    color: #f3ef50;
}

/* ! FOOTER */
footer {
    color: #960a08;
    padding: 20px;
    text-align: center;
    margin-top: 20px;
}

/* ! Media Queries */
@media (max-width: 768px) {
    header > .container,
    #newsletter > .container,
    #boxes > .container {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-bottom: 20px;
    }

    #showcase .container {
        padding-bottom: 50px;
    }

    .box {
        width: 80%;
    }

    #about > .container,
    #services > .container {
        grid-template-columns: 1fr;
    }
}

